variables.Variables.scala.error
Compilation error:
Variables:7: error: not found: value pichupBaggle
pichupBaggle
^