variables.Variables.scala.code
var stepamount= 0
var donesteps=0
while (!isOverBaggle){
  forward()
  stepamount=stepamount+1
}
pichupBaggle
while (stepamount != donesteps){
  donesteps= donesteps+1
  isCarryingBaggle
  backward()
  
}